# winjector

./: .rustfmt.toml  Cargo.toml  build.rs
.cargo/: config.toml
example/: Cargo.toml
example/src/: lib.rs  payloads.rs
injector/: Cargo.toml
injector/src/: error.rs  helpers.rs  lib.rs  main.rs  shellcode.rs
injector/src/windows_wrapper/: module.rs  process.rs  snapshot.rs  system.rs  thread.rs  virtual_alloc.rs  window.rs
loader/: Cargo.toml
loader/src/: error.rs  helpers.rs  lib.rs  structures.rs  syscall.rs
src/: error.rs  helpers.rs  lib.rs  loader.rs  main.rs  shellcode.rs  windows_wrapper.rs
src/object/: pe.rs
src/windows_wrapper/: module.rs  process.rs  snapshot.rs  system.rs  thread.rs  virtual_alloc.rs  window.rs
