[package]
name = "winjector"
version = "0.2.0"
authors = ["Ben-Lichtman"]
edition = "2021"

[dependencies]
iced-x86 = { version = "1.17.0", features = ["code_asm"] }
thiserror = "1.0.30"

[dependencies.windows]
version = "0.34.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Kernel",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
]
