[package]
name = "example"
version = "0.2.0"
authors = ["Ben-Lichtman"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true
overflow-checks = true

[dependencies]
loader = { path = "../loader" }

[dependencies.windows]
version = "0.34.0"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
]
