[package]
name = "example"
version = "0.2.0"
authors = ["Ben-Lichtman"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ntapi = "0.4.0"
# symfinder = { path = "../../symfinder" }
reloader = { path = "../../reloader" }

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Memory",
]
