[package]
name = "winjector"
version = "0.2.0"
authors = ["Ben-Lichtman"]
edition = "2021"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
iced-x86 = { version = "1.18.0", features = ["code_asm"] }
object = "0.30.0"
thiserror = "1.0.38"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Kernel",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
]
