[package]
name = "winjector"
version = "0.2.0"
authors = ["Ben-Lichtman"]
edition = "2024"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
goldberg = "0.1.0"
iced-x86 = { version = "1.18.0", features = ["code_asm"] }
obfstr = "0.4.3"
object = "0.30.0"
thiserror = "1.0.38"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_System_SystemInformation",
]
